--- a/WebApp/styles/mixins.css
+++ b/WebApp/styles/mixins.css
@@ -19,9 +19,6 @@ H4: Section Header
 H5: Label
 H6: Description
 */
-.shadow {
-  box-shadow: 0rem 0rem 0.5rem #000000;
-}
 .f-lobster {
   font-family: 'Lobster', cursive;
   -webkit-font-smoothing: antialiased;
@@ -32,6 +29,15 @@ H6: Description
 }
 .f-mono {
   font-family: 'Source Code Pro', monospace;
+}
+.f-timer {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 3.75em;
+  font-weight: 400;
+  color: #f5f5f5;
+  text-align: center;
+  -webkit-font-smoothing: antialiased;
 }
 ::placeholder {
   color: rgba(245, 245, 245, 0.3);
