Mobile Web App R1
• Added styles to Exercise Log

--- a/WebApp/styles/mixins.less
+++ b/WebApp/styles/mixins.less
@@ -148,6 +148,15 @@ H6: Description
     -webkit-font-smoothing: antialiased;
 }
 
+.f-axis(@color:@black){
+    .f-roboto;
+    color:@color;
+    -webkit-font-smoothing: antialiased;
+    font-size: 1em;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
 
 
 //                             FIX THIS
