--- a/WebApp/styles/styles.css
+++ b/WebApp/styles/styles.css
@@ -205,7 +205,7 @@ ul.landing div {
 }
 ul.exercises a {
   align-items: center;
-  padding: 1rem 1.5rem;
+  padding: 1rem 1.125rem;
 }
 ul.exercises img {
   flex: 0 1 auto;
@@ -887,5 +887,71 @@ i.strum_accent {
 #drawer .submit button:first-of-type {
   margin-right: 0.75rem;
 }
-
-/* This beautiful CSS-File has been crafted with LESS (lesscss.org) and compiled by simpLESS (wearekiss.com/simpless) */
+#changes .log li {
+  display: flex;
+  justify-content: space-between;
+  box-shadow: none;
+  height: 3rem;
+  padding: 0 1.125rem;
+}
+#changes .log h5,
+#changes .log h6 {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 1.25rem;
+  color: #263238;
+  text-align: center;
+}
+#charts canvas {
+  background-color: #ff8a65;
+  height: 485px;
+}
+#charts #axis {
+  width: 100%;
+  height: 485px;
+  max-height: 485px;
+}
+#charts #axis #y {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+  padding: 0;
+}
+#charts #axis #y li {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  color: #263238;
+  -webkit-font-smoothing: antialiased;
+  font-size: 1em;
+  font-weight: 700;
+  text-transform: uppercase;
+  opacity: .5;
+  margin-left: 1.125rem;
+  background: none;
+}
+#charts #axis #x {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: auto 0rem;
+  padding: 0.5rem 1.5rem;
+  background: linear-gradient(55deg, #000000, #37474f);
+}
+#charts #axis #x li {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  color: #f5f5f5;
+  -webkit-font-smoothing: antialiased;
+  font-size: 1em;
+  font-weight: 700;
+  text-transform: uppercase;
+  -webkit-font-smoothing: antialiased;
+  background: none;
+}
+#charts #axis li {
+  box-shadow: none;
+}
+.pagination {
+  background-color: #0097a7;
+}
