--- a/WebApp/styles/styles.less
+++ b/WebApp/styles/styles.less
@@ -113,7 +113,7 @@ ul{
     &.exercises{
         a{
             align-items: center;
-            padding: 1rem 24/16rem;
+            padding: 1rem 18/16rem;
         }
 
         img{
@@ -612,4 +612,63 @@ i{
             margin-right: 12/16rem;
         }
     }
+}
+
+#changes .log{
+    li{
+        display: flex;
+        justify-content: space-between;
+        box-shadow: none;
+        height: 48/16rem;
+        padding: 0 18/16rem;
+    }
+    h5, h6{
+        .f-button(@black);
+    }
+}
+
+#charts{
+    canvas{
+        background-color: @orange;
+        height: 485px;
+    }
+    #axis{
+        width: 100%;
+        height: 485px;
+        max-height: 485px;
+        #y{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            height: 100%;
+            padding: 0;
+            li{
+                .f-axis(@black);
+                opacity: .5;
+                margin-left: 18/16rem;
+                background: none;
+            }
+        }
+        #x{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            margin: auto 0rem;
+            padding: 8/16rem 24/16rem;
+            .gradient(gray);
+            li{
+                .f-axis(@white);
+                -webkit-font-smoothing: antialiased;
+                background:none;
+            }
+        }
+        li{
+            box-shadow: none;
+        }
+    }
+
+}
+
+.pagination{
+    background-color: @teal;
 }
