--- a/WebApp/styles/mixins.css
+++ b/WebApp/styles/mixins.css
@@ -35,19 +35,15 @@ H6: Description
   font-weight: 400;
   font-size: 3.75em;
   font-weight: 400;
-  color: #f5f5f5;
+  color: white;
   text-align: center;
   -webkit-font-smoothing: antialiased;
 }
-::placeholder {
-  color: rgba(245, 245, 245, 0.3);
-}
-::-webkit-input-placeholder {
-  color: rgba(245, 245, 245, 0.3);
-}
-::-moz-placeholder {
-  color: rgba(245, 245, 245, 0.3);
-}
-::-ms-input-placeholder {
-  color: rgba(245, 245, 245, 0.3);
+.f-counter {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 5em;
+  color: #263238;
+  letter-spacing: 0.46em;
+  padding-left: 0.6em;
 }
