--- a/WebApp/styles/styles.css
+++ b/WebApp/styles/styles.css
@@ -35,21 +35,17 @@ H6: Description
   font-weight: 400;
   font-size: 3.75em;
   font-weight: 400;
-  color: #f5f5f5;
+  color: white;
   text-align: center;
   -webkit-font-smoothing: antialiased;
 }
-::placeholder {
-  color: rgba(245, 245, 245, 0.3);
-}
-::-webkit-input-placeholder {
-  color: rgba(245, 245, 245, 0.3);
-}
-::-moz-placeholder {
-  color: rgba(245, 245, 245, 0.3);
-}
-::-ms-input-placeholder {
-  color: rgba(245, 245, 245, 0.3);
+.f-counter {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 5em;
+  color: #263238;
+  letter-spacing: 0.46em;
+  padding-left: 0.6em;
 }
 * {
   box-sizing: border-box;
@@ -62,16 +58,30 @@ H6: Description
   color: #263238;
   line-height: 1.5em;
 }
+html {
+  min-height: 100%;
+}
+body {
+  height: 100%;
+}
 body.bg_primary {
+  min-height: 100%;
+  height: auto;
   background: linear-gradient(55deg, #000000, #37474f);
 }
 body.bg_exercise {
+  min-height: 100%;
+  height: auto;
   background: linear-gradient(55deg, #ef5350, #ffcc80);
 }
 body.bg_song {
+  min-height: 100%;
+  height: auto;
   background: linear-gradient(55deg, #006064, #4db6ac);
 }
 body.bg_photo {
+  min-height: 100%;
+  height: auto;
   background-image: url('../img/bg_amp.jpg');
   background-size: cover;
   background-position: top center;
@@ -289,9 +299,13 @@ ul.strum li {
   display: none;
 }
 .fab.exercises:hover a {
+  min-height: 100%;
+  height: auto;
   background: linear-gradient(55deg, #ef5350, #ffcc80);
 }
 .fab.songs:hover a {
+  min-height: 100%;
+  height: auto;
   background: linear-gradient(55deg, #006064, #4db6ac);
 }
 .fab img {
@@ -413,6 +427,8 @@ i.strum_accent {
   left: 0;
   width: 100%;
   height: 100%;
+  min-height: 100%;
+  height: auto;
   background: linear-gradient(55deg, #006064, #4db6ac);
   display: flex;
   flex-flow: column;
@@ -821,7 +837,7 @@ i.strum_accent {
   font-weight: 400;
   font-size: 3.75em;
   font-weight: 400;
-  color: #f5f5f5;
+  color: white;
   text-align: center;
   -webkit-font-smoothing: antialiased;
   line-height: 3.75rem;
@@ -885,7 +901,28 @@ i.strum_accent {
   background-color: rgba(255, 138, 101, 0.15);
 }
 #drawer .submit button:first-of-type {
-  margin-right: 0.75rem;
+  margin: 2.25rem 1.5rem;
+}
+#changes input {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 5em;
+  color: #263238;
+  letter-spacing: 0.46em;
+  padding-left: 0.6em;
+  border-bottom: 1px solid rgba(38, 50, 56, 0.1);
+}
+#changes input::placeholder {
+  color: rgba(38, 50, 56, 0.3);
+}
+#changes input::-webkit-input-placeholder {
+  color: rgba(38, 50, 56, 0.3);
+}
+#changes input::-moz-placeholder {
+  color: rgba(38, 50, 56, 0.3);
+}
+#changes input::-ms-input-placeholder {
+  color: rgba(38, 50, 56, 0.3);
 }
 #changes .log li {
   display: flex;
@@ -902,21 +939,34 @@ i.strum_accent {
   color: #263238;
   text-align: center;
 }
-#charts canvas {
-  background-color: #ff8a65;
+#charts {
   height: 485px;
+  position: relative;
+}
+#charts canvas {
+  height: 485px;
+  width: 100%;
+  margin: 0rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
 }
 #charts #axis {
   width: 100%;
-  height: 485px;
-  max-height: 485px;
+  height: 449px;
+  position: absolute;
+  top: 2.25rem;
+  left: 0;
+  z-index: 1;
 }
 #charts #axis #y {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 100%;
-  padding: 0;
+  height: 409px;
+  padding: 0rem;
+  margin: 0rem;
 }
 #charts #axis #y li {
   font-family: 'Roboto Condensed', sans-serif;
@@ -927,7 +977,7 @@ i.strum_accent {
   font-weight: 700;
   text-transform: uppercase;
   opacity: .5;
-  margin-left: 1.125rem;
+  margin-left: 1.5rem;
   background: none;
 }
 #charts #axis #x {
@@ -936,6 +986,8 @@ i.strum_accent {
   justify-content: space-around;
   margin: auto 0rem;
   padding: 0.5rem 1.5rem;
+  min-height: 100%;
+  height: auto;
   background: linear-gradient(55deg, #000000, #37474f);
 }
 #charts #axis #x li {
@@ -953,5 +1005,15 @@ i.strum_accent {
   box-shadow: none;
 }
 .pagination {
-  background-color: #0097a7;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 3.625rem;
+  padding-bottom: 0.5rem;
+}
+.pagination img {
+  opacity: .4;
+}
+.pagination .active {
+  opacity: 1;
 }
