--- a/WebApp/styles/styles.less
+++ b/WebApp/styles/styles.less
@@ -8,7 +8,11 @@
     .f-detail;
 }
 
+html{
+    min-height: 100%;
+}
 body{
+    height: 100%;
     &.bg_primary    {   .gradient(gray);    }
     &.bg_exercise   {   .gradient(orange);  }
     &.bg_song       {   .gradient(blue);    }
@@ -390,7 +394,6 @@ i{
         background:none;
         border: 0px;
         border-bottom: 1px solid fade(@white, 15%);
-
         margin-bottom: 12/16rem;
         &::placeholder{
             color: fade(@white, 30%);
@@ -509,7 +512,6 @@ i{
 }
 
 
-
 //                          KEYBOARD
 
 .bg_song .keyboard{
@@ -519,7 +521,6 @@ i{
 .bg_exercise .keyboard{
     .keyboard_mixin(@red);
 }
-
 
 
 //                          exercises
@@ -571,7 +572,6 @@ i{
     left:0;
     width: 100%;
     background-color: white;
-    //height: 400/16rem;
     article {
         h4{
             color: @teal;
@@ -609,43 +609,72 @@ i{
             }
         }
         & button:first-of-type{
-            margin-right: 12/16rem;
+            margin: 36/16rem 24/16rem;
         }
     }
 }
 
-#changes .log{
-    li{
-        display: flex;
-        justify-content: space-between;
-        box-shadow: none;
-        height: 48/16rem;
-        padding: 0 18/16rem;
+#changes {
+    input{
+        .f-counter;
+        border-bottom: 1px solid fade(@black, 10%);
+        &::placeholder{
+            color: fade(@black, 30%);
+        }
+        &::-webkit-input-placeholder{
+            color: fade(@black, 30%);
+        }
+        &::-moz-placeholder{
+            color: fade(@black, 30%);
+        }
+        &::-ms-input-placeholder{
+            color: fade(@black, 30%);
+        }
     }
-    h5, h6{
-        .f-button(@black);
+    .log{
+        li{
+            display: flex;
+            justify-content: space-between;
+            box-shadow: none;
+            height: 48/16rem;
+            padding: 0 18/16rem;
+        }
+        h5, h6{
+            .f-button(@black);
+        }
     }
 }
 
 #charts{
+    height: 485px;
+    position: relative;
     canvas{
-        background-color: @orange;
         height: 485px;
+        width: 100%;
+        margin: 0rem;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 2;
     }
     #axis{
         width: 100%;
-        height: 485px;
-        max-height: 485px;
+        height: 449px;
+        position: absolute;
+        top: 36/16rem;
+        left: 0;
+        z-index: 1;
         #y{
             display: flex;
             flex-direction: column;
             justify-content: space-around;
-            height: 100%;
-            padding: 0;
+            height: 409px;
+            padding: 0rem;
+            margin: 0rem;
             li{
                 .f-axis(@black);
                 opacity: .5;
-                margin-left: 18/16rem;
+                margin-left: 24/16rem;
                 background: none;
             }
         }
@@ -670,5 +699,15 @@ i{
 }
 
 .pagination{
-    background-color: @teal;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 58/16rem;
+    padding-bottom: 8/16rem;
+    img{
+        opacity: .4;
+    }
+    .active{
+        opacity: 1;
+    }
 }
