--- a/Prototype/css/style.css
+++ b/Prototype/css/style.css
@@ -18,10 +18,22 @@ ___________________________________________ Global */
 html, body {
 	height: 100%;
 	margin: 0px;
-	background-color: #eee;
+	background-color: #F2C2C2;
 	font-family: 'Source Serif Pro', serif;
 }
 
+
+#mobileContainer{
+	width: 360px;
+	min-height: 640px;
+	border-top: 72px solid #E37979;
+	border-bottom: 72px solid #E37979;
+	border-left: 12px solid #E37979;
+	border-right: 12px solid #E37979;
+	border-radius: 12px;
+	box-shadow: 0px 0px 12px rgba(0,0,0,.3);
+	margin:36px auto;
+}
 
 a{
 	color: #222;
