--- a/WebApp/styles/mixins.css
+++ b/WebApp/styles/mixins.css
@@ -1,49 +1,1 @@
-/*
-H1: Page Title
-H2: Page Sub-Title, Line 1
-H3: Page Sub-Title, Line 2
-H4: Section Header
-H5: Label
-H6: Description
-*/
-@import url("https://fonts.googleapis.com/css?family=Lobster");
-
-@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700");
-
-@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro");
-/*
-H1: Page Title
-H2: Page Sub-Title, Line 1
-H3: Page Sub-Title, Line 2
-H4: Section Header
-H5: Label
-H6: Description
-*/
-.f-lobster {
-  font-family: 'Lobster', cursive;
-  -webkit-font-smoothing: antialiased;
-}
-.f-roboto {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 400;
-}
-.f-mono {
-  font-family: 'Source Code Pro', monospace;
-}
-.f-timer {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 400;
-  font-size: 3.75em;
-  font-weight: 400;
-  color: white;
-  text-align: center;
-  -webkit-font-smoothing: antialiased;
-}
-.f-counter {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 400;
-  font-size: 5em;
-  color: #263238;
-  letter-spacing: 0.46em;
-  padding-left: 0.6em;
-}
+@import url("https://fonts.googleapis.com/css?family=Lobster");@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700");@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro");.f-lobster{font-family:Lobster,cursive;-webkit-font-smoothing:antialiased}.f-roboto{font-family:Roboto Condensed,sans-serif;font-weight:400}.f-mono{font-family:Source Code Pro,monospace}.f-timer{font-size:3.75em;color:#fff;text-align:center;-webkit-font-smoothing:antialiased}.f-counter,.f-timer{font-family:Roboto Condensed,sans-serif;font-weight:400}.f-counter{font-size:5em;color:#263238;letter-spacing:.46em;padding-left:.6em}
